fix: dark mode alert colors

--- a/src/index.sass
+++ b/src/index.sass
@@ -59,7 +59,7 @@ body
 		color: var(--ifm-color-danger-lighter)
 
 .alert--success
-	--ifm-alert-background-color: #EEEDA1
+	--ifm-alert-background-color: #eef29a
 	--ifm-alert-border-color: #C2C028
 	--ifm-alert-color: var(--ifm-color-black)
 	--ifm-alert-foreground-color: var(--ifm-color-black)
@@ -70,8 +70,8 @@ body
 		text-underline-offset: 4px
 
 	html[data-theme="dark"] &
-		--ifm-alert-background-color: #262115
-		--ifm-alert-border-color: #4b470a
+		--ifm-alert-background-color: #fcd577
+		--ifm-alert-border-color: #726d08
 		--ifm-alert-color: var(--ifm-color-white)
 		--ra-admonition-icon-color: var(--ifm-color-white)
 
